# fari-digital-twin-backend-v2

./: .gitignore  openapi.yaml  pyproject.toml
